--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
+    "google-libphonenumber": "^3.2.33",
+    "i18n-iso-countries": "^7.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
