--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@material-tailwind/react": "^2.1.8",
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
     "google-libphonenumber": "^3.2.33",
